# gtk3vicemon

./: .gitignore  Makefile.am  README.md  configure.ac
data/: Makefile.am  resources.xml  settings.ini
data/ui/: Makefile.am  app-menu.xml
m4/: compiler_checks.m4
src/: .gitignore  Makefile.am  debug.h  hexdump.c  hexdump.h  log.c  log.h  main.c  settings.c  settings.h  vicemonapi.h
src/mon/: .gitignore  Makefile.am  connect_test.c  connect_test.h  connection.c  connection.h  monitor.h
src/ui/: .gitignore  Makefile.am  appwindow.c  appwindow.h  connection-widget.c  connection-widget.h  logview.c  logview.h  memview.c  settingsdialog.c  settingsdialog.h  statusbar.c  statusbar.h
